--- a/customer/package.json
+++ b/customer/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "NODE_ENV=prod nodemon src/index.js",
     "dev": "NODE_ENV=dev nodemon src/index.js"
   },
@@ -23,6 +23,7 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1"
   }
 }
