--- a/customer/.env.dev
+++ b/customer/.env.dev
@@ -1,12 +1,13 @@
 APP_SECRET='shopping_microservice_arch'
 
 # Mongo DB
-MONGODB_URI='mongodb://nosql-db/shopping_ms_customer'
+MONGODB_URI='mongodb://localhost/shopping_ms_customer'
+# MONGODB_URI=mongodb://nosql-db:27017/shopping_ms_customer
 
 # Port
 PORT=8001
 EXCHANGE_NAME='ONLINE_STORE'
 
 
-# MSG_QUEUE_URL='amqp://localhost'
-MSG_QUEUE_URL='amqps://dfgtirrz:jN9LI_BxAsCv7AGQSeTCAxstTkjavDLe@lionfish.rmq.cloudamqp.com/dfgtirrz'
+MSG_QUEUE_URL='amqp://localhost'
+# MSG_QUEUE_URL=amqps://dfgtirrz:jN9LI_BxAsCv7AGQSeTCAxstTkjavDLe@lionfish.rmq.cloudamqp.com/dfgtirrz
