--- a/customer/package.json
+++ b/customer/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^7.69.0",
+    "@sentry/profiling-node": "^1.2.1",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
