--- a/shopping/package.json
+++ b/shopping/package.json
@@ -15,10 +15,12 @@
     "amqplib": "^0.10.3",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^7.5.0",
     "uuid": "^9.0.0",
     "winston": "^3.10.0"
